# blocks49

./: .gitignore  README.md  SETUP.md  auth.csv  package.json  pyproject.toml  wrangler.toml
.github/workflows/: deploy.yml
classifier/: README.md  __init__.py
classifier/data/: image_transform.py  manifest.py  r49_dataloaders.py  r49_dataset.py  r49_file.py
classifier/learn/: config.py  exporter.py  learner.py
frontend/src/: rr-live-view.ts
frontend/src/app/: config.ts
mqtt/: README.md  docker-compose.yml  nanomq.conf
server/: .gitignore  build.js  data.db  drizzle.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
server/drizzle/: 0000_initial_schema.sql  0000_red_micromax.sql  0001_closed_lily_hollister.sql
server/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
server/scripts/: get-refresh-token.ts  list-layouts.ts  verify-db.ts
server/src/: app.ts  boot-check.ts  config.ts  index.ts  worker.ts
server/src/db/: index.ts  schema.ts  sqlite.ts
server/src/middleware/: auth.ts  rbac.ts  rules.ts
server/src/routes/: export.ts  images.ts  layouts.ts  layouts_images.ts  users.ts
server/src/services/: drive-api.ts  (+2 more)
server/tests/: api.test.ts  global-setup.ts
shared/: config.ts
test/server/: api.test.ts  api_rbac.test.ts  global-setup.ts  limits.test.ts  smoke.test.ts
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/public/: CNAME
ui/src/: index.ts  rr-label.ts  rr-layout-editor.ts  rr-live-view.ts  rr-main.ts  rr-marker.ts  rr-page.ts  rr-settings.ts
(+12 files in other folders)
