[project]
name = "rails49"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.2"
dependencies = [
    "fastai>=2.8.6",
    "matplotlib>=3.10.8",
    "onnx>=1.20.0",
    "onnxconverter-common>=1.16.0",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.12.0.88",
    "timm>=1.0.22",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.5",
]
